<resources>
    <string name="app_name">Imc App</string>
    <string name="login_titulo"> Login</string>
    <string name="login_subtitulo"> Faça login para continuar</string>
    <string name="login_et_email">E-mail</string>
    <string name="login_et_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_lembrar_me">Lembrar-me</string>
    <string name="login_esqueci">Esqueci a senha</string>
    <string name="login_nao_tem_conta">Não tem uma conta?</string>
    <string name="login_criar_conta">Criar uma conta agora</string>
    <string name="novo_usuario_nome">Nome</string>
    <string name="novo_usuario_altura">Altura</string>
    <string name="novo_usuario_profissao">Profissão</string>
    <string name="novo_usuario_nascimento">Data de nascimento</string>
    <string name="novo_usuario_sexo">Sexo</string>
    <string name="novo_usuario_feminino">Femimino</string>
    <string name="novo_usuario_masculino">Masculino</string>
    <string name="trocar_foto">Trocar foto</string>
    <string name="dados_para_autentica">Dados para autenticação</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="titulo_peso">Vamos nos pesar?</string>
    <string name="info">Mantenha seu peso sempre atualizado, assim você poderá acompanhar sua evolução</string>
    <string name="dados_pessagem">Dados da sua pessagem</string>
    <string name="data_pesagem">Data da pesagem:</string>
    <string name="nivel_atividade">Nível de atividade</string>

    <string-array name="atividade">
        <item> Atividade leve</item>
        <item> Atividade moderada</item>
        <item> Atividade intensa</item>
    </string-array>

</resources>