<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="-2dp"
        android:background="@color/purple_700"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/audiowide"
            android:gravity="end"
            android:text="HEALTH \n CALC"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/iv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_titulo"
            android:layout_alignBottom="@id/tv_titulo"
            android:layout_alignParentEnd="true"
            android:src="@drawable/imc64" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_wave_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/wave"
        android:scaleType="fitXY"
        android:layout_below="@id/rl_header" />



    <ImageView
        android:id="@+id/iv_wave_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/wave_cima"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desenvolvido por DS2T-A"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_wave_top"
        android:layout_above="@id/iv_wave_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_titulo"
                android:textAppearance="@style/titulo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/login_subtitulo"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_et_email"
                app:endIconMode="clear_text"
                >

                <EditText
                    android:id="@+id/edit_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_et_senha"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edit_login_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword">

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_entar"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_entrar"></Button>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_lembrar_me"
                android:layout_gravity="end"
                android:layout_marginTop="5dp">
            </CheckBox>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_esqueci"
                android:layout_gravity="end"
                android:textAllCaps="false">

            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_nao_tem_conta"></TextView>

                <Button
                    android:id="@+id/button_nova_conta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_criar_conta"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false">

                </Button>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>