<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end"
    android:layout_marginTop="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/michele"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_width="307dp"
        android:layout_height="173dp"
        android:layout_gravity="center"
        android:src="@drawable/img_peso" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_peso"
        android:textAppearance="@style/titulo"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/purple_700"
        android:gravity="center_vertical"
        android:text="@string/info"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/icon_dados_24"
        android:drawableTint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:text="@string/dados_pessagem"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/data_pesagem"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/data_pesagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="20/11/2021"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/nivel_atividade"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Spinner
        android:id="@+id/nivel_ativ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/atividade" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="Seu novo peso:"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/novo_peso"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KG"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/registrar_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar peso"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginTop="18dp">
    </Button>


</LinearLayout>